Finish up the project, add security to the app